tests/fixtures/invalid/divmod_none_none.py
# Cannot call divmod() with None, None
x = divmod(None, None)
